# cvmtool

./: Cargo.toml  README.md  deny.toml  typos.toml
.github/workflows/: ci.yml
src/: azure.rs  main.rs  sev.rs  tdx.rs  vcek.rs
src/azure/: cpuid.rs  runtime_claims.rs  tpm.rs
tests/: cli.rs
tests/fixtures/: generate-sev-fake-certs.sh  sev.report
tests/fixtures/sev-certs/: ark.pem  ask.pem  vcek.pem
tests/fixtures/sev-fake-certs/: ark.pem  ask.pem  vcek.pem
