[package]
name = "cvmtool"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2024"

[features]
default = []
azure = ["tss-esapi", "serde", "serde_json"]

[dependencies]
configfs-tsm = "0.0.2"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tdx-quote = "0.0.5"
sev = { version = "7.1.0", features = ["openssl"] }
openssl = "0.10"
x509-parser = "0.18"
asn1-rs = "0.7"
reqwest = { version = "0.13", features = ["blocking"] }
percent-encoding = "2.3"
rand = "0.9.2"
tss-esapi = { version = "7.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
